// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle > renders with class correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 focus:outline-none focus-visible:bg-accented/75 disabled:bg-elevated aria-disabled:bg-elevated rounded-none">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with icon correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 focus:outline-none focus-visible:bg-accented/75 disabled:bg-elevated aria-disabled:bg-elevated p-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
  <!--v-if-->
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with label correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 focus:outline-none focus-visible:bg-accented/75 disabled:bg-elevated aria-disabled:bg-elevated">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with leading and icon correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 focus:outline-none focus-visible:bg-accented/75 disabled:bg-elevated aria-disabled:bg-elevated p-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
  <!--v-if-->
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with leadingIcon correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 focus:outline-none focus-visible:bg-accented/75 disabled:bg-elevated aria-disabled:bg-elevated p-1.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
  <!--v-if-->
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with neutral color error correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-error bg-error/10 hover:bg-error/15 active:bg-error/15 focus:outline-none focus-visible:bg-error/15 disabled:bg-error/10 aria-disabled:bg-error/10">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with neutral color info correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-info bg-info/10 hover:bg-info/15 active:bg-info/15 focus:outline-none focus-visible:bg-info/15 disabled:bg-info/10 aria-disabled:bg-info/10">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with neutral color neutral correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 focus:outline-none focus-visible:bg-accented/75 disabled:bg-elevated aria-disabled:bg-elevated">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with neutral color primary correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-primary bg-primary/10 hover:bg-primary/15 active:bg-primary/15 focus:outline-none focus-visible:bg-primary/15 disabled:bg-primary/10 aria-disabled:bg-primary/10">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with neutral color secondary correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-secondary bg-secondary/10 hover:bg-secondary/15 active:bg-secondary/15 focus:outline-none focus-visible:bg-secondary/15 disabled:bg-secondary/10 aria-disabled:bg-secondary/10">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with neutral color success correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-success bg-success/10 hover:bg-success/15 active:bg-success/15 focus:outline-none focus-visible:bg-success/15 disabled:bg-success/10 aria-disabled:bg-success/10">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with neutral color warning correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-warning bg-warning/10 hover:bg-warning/15 active:bg-warning/15 focus:outline-none focus-visible:bg-warning/15 disabled:bg-warning/10 aria-disabled:bg-warning/10">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with primary variant ghost correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-default hover:bg-elevated active:bg-elevated focus:outline-none focus-visible:bg-elevated hover:disabled:bg-transparent dark:hover:disabled:bg-transparent hover:aria-disabled:bg-transparent dark:hover:aria-disabled:bg-transparent">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with primary variant link correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with primary variant outline correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-default hover:bg-elevated active:bg-elevated disabled:bg-default aria-disabled:bg-default focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with primary variant soft correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 focus:outline-none focus-visible:bg-accented/75 disabled:bg-elevated aria-disabled:bg-elevated">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with primary variant solid correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-inverted bg-inverted hover:bg-inverted/90 active:bg-inverted/90 disabled:bg-inverted aria-disabled:bg-inverted focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with primary variant subtle correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 ring ring-inset ring-accented text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 disabled:bg-elevated aria-disabled:bg-elevated focus:outline-none focus-visible:ring-2 focus-visible:ring-inverted">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with size lg correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 focus:outline-none focus-visible:bg-accented/75 disabled:bg-elevated aria-disabled:bg-elevated">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with size md correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 focus:outline-none focus-visible:bg-accented/75 disabled:bg-elevated aria-disabled:bg-elevated">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with size sm correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-xs gap-1.5 text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 focus:outline-none focus-visible:bg-accented/75 disabled:bg-elevated aria-disabled:bg-elevated">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with size xl correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-base gap-2 text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 focus:outline-none focus-visible:bg-accented/75 disabled:bg-elevated aria-disabled:bg-elevated">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with size xs correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2 py-1 text-xs gap-1 text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 focus:outline-none focus-visible:bg-accented/75 disabled:bg-elevated aria-disabled:bg-elevated">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;

exports[`Toggle > renders with trailing and icon correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 focus:outline-none focus-visible:bg-accented/75 disabled:bg-elevated aria-disabled:bg-elevated p-1.5">
  <!--v-if-->
  <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
</button>
<!---->"
`;

exports[`Toggle > renders with trailingIcon correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 focus:outline-none focus-visible:bg-accented/75 disabled:bg-elevated aria-disabled:bg-elevated p-1.5"></button>
<!---->"
`;

exports[`Toggle > renders with ui correctly 1`] = `
"<button type="button" aria-pressed="false" data-state="off" id="v-0" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 focus:outline-none focus-visible:bg-accented/75 disabled:bg-elevated aria-disabled:bg-elevated rounded-none">
  <!--v-if--><span class="truncate">Toggle</span>
  <!--v-if-->
</button>
<!---->"
`;
